--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             margin: auto;
             border-radius: 20px;
             background-color: white;
-            width: 48vw;
+            max-width: 48vw;
             height: 92vh;
         }
         #boximagem{
             background-image: url(image\ login.jpg);
             background-repeat: no-repeat;
             background-size: cover;
+            border-radius: 10px 10px 0px 0px;
             width: 48vw;
             height: 35vh;
         }
@@ -38,7 +39,7 @@
         #boxlogin > p {
             margin: 0px;
             padding: 5px;
-            text-align: justify;
+            
         }
         #email{
             width: 44vw;
